--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,10 @@ jobs:
             docker build -t $IMAGE_NAME:latest .
       - run:
           name: Archive Docker image
-          command: docker save -o image.tar $IMAGE_NAME
+          command: |
+            docker save -o image.tar $IMAGE_NAME
+            echo $(pwd)
+            ls -al
       - persist_to_workspace:
           root: .
           paths:
@@ -40,10 +43,7 @@ workflows:
   version: 2
   build-master:
     jobs:
-      - build:
-          filters:
-            branches:
-              only: master
+      - build
       - publish-latest:
           requires:
             - build
